# kach-7aja

./: database.py  docker-compose.yml  main.py  models.py  pyproject.toml  salah_feature.py  sql_app.db
.github/: pull_request_template.md
.github/workflows/: test.yml
templates/: add_quote.html  index.html  page1.html  page2.html  random_quote.html  search_results.html
tests/: test_main.py
