[project]
name = "kach-7aja"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi[standard]>=0.120.0",
  "jinja2>=3.1.6",
  "uvicorn>=0.38.0",
]

[project.optional-dependencies]
test = ["pytest>=8.3.2", "httpx>=0.27.0"]
[tool.pytest.ini_options]
pythonpath = ["."]
